<resources>
    <string name="app_name">TheElephant</string>
    <string name="default_web_client_id" translatable="false">webClientId.app.googleusercontent.com</string>
    <string name="registrations">Регистрация</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="google">Google</string>
    <string name="have_account">Уже есть аккаунт?</string>
    <string name="calendar">Календарь</string>
    <string name="profile">Профиль</string>
    <string name="phone">Телефон</string>
    <string name="remaining_classes">Осталось занятий</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="change_password">Изменить пароль</string>
    <string name="change_theme">Изменить тему</string>
    <string name="log_out_account">Выйти из аккаунта</string>
    <string name="enter">Войти</string>
    <string name="authorization">Авторизация</string>
    <string name="_8_00">8:00</string>
    <string name="_9_00">9:00</string>
    <string name="_10_00">10:00</string>
    <string name="_11_00">11:00</string>
    <string name="_12_00">12:00</string>
    <string name="_13_00">13:00</string>
    <string name="_14_00">14:00</string>
    <string name="_15_00">15:00</string>
    <string name="_16_00">16:00</string>
    <string name="_17_00">17:00</string>
    <string name="_18_00">18:00</string>
    <string name="_19_00">19:00</string>
    <string name="_9_30">09:30</string>
    <string name="_10_30">10:30</string>
    <string name="_11_30">11:30</string>
    <string name="_12_30">12:30</string>
    <string name="_13_30">13:30</string>
    <string name="_14_30">14:30</string>
    <string name="_15_30">15:30</string>
    <string name="_16_30">16:30</string>
    <string name="_17_30">17:30</string>
    <string name="_18_30">18:30</string>
    <string name="_19_30">19:30</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>