<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.Fragments.RecordListFragment">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:orientation="vertical"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextViewCalendar"
            android:text="@string/_9_00" />

        <TextView
            style="@style/TextViewCalendar"
            android:text="@string/_9_30" />

        <TextView
            style="@style/TextViewCalendar"
            android:text="@string/_10_00" />

        <TextView
            style="@style/TextViewCalendar"
            android:text="@string/_10_30" />

        <TextView
            style="@style/TextViewCalendar"
            android:text="@string/_11_00" />

        <TextView
            style="@style/TextViewCalendar"
            android:text="@string/_11_30" />

        <TextView
            style="@style/TextViewCalendar"
            android:text="@string/_12_00" />

        <TextView
            style="@style/TextViewCalendar"
            android:text="@string/_12_30" />

        <TextView
            style="@style/TextViewCalendar"
            android:text="@string/_13_00" />

        <TextView
            style="@style/TextViewCalendar"
            android:text="@string/_13_30" />

        <TextView
            style="@style/TextViewCalendar"
            android:text="@string/_14_00" />

        <TextView
            style="@style/TextViewCalendar"
            android:text="@string/_14_30" />

        <TextView
            style="@style/TextViewCalendar"
            android:text="@string/_15_00" />

        <TextView
            style="@style/TextViewCalendar"
            android:text="@string/_15_30" />

        <TextView
            style="@style/TextViewCalendar"
            android:text="@string/_16_00" />

        <TextView
            style="@style/TextViewCalendar"
            android:text="@string/_16_30" />

        <TextView
            style="@style/TextViewCalendar"
            android:text="@string/_17_00" />

        <TextView
            style="@style/TextViewCalendar"
            android:text="@string/_17_30" />

        <TextView
            style="@style/TextViewCalendar"
            android:text="@string/_18_00" />

        <TextView
            style="@style/TextViewCalendar"
            android:text="@string/_18_30" />

        <TextView
            style="@style/TextViewCalendar"
            android:text="@string/_19_00" />

        <TextView
            style="@style/TextViewCalendar"
            android:text="@string/_19_30" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>