<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.PersonalAccountFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nameTextView"
            style="@style/NormalText"
            android:text="@string/name" />

        <TextView
            android:id="@+id/surnameTextView"
            android:text="@string/surname"
            style="@style/NormalText" />

        <TextView
            android:id="@+id/phoneTextView"
            style="@style/NormalText"
            android:text="@string/phone" />

        <TextView
            android:id="@+id/remainingClasses"
            style="@style/NormalText"
            android:text="@string/remaining_classes" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.125">

        <TextView
            android:id="@+id/editProfile"
            style="@style/MenuTextView"
            android:text="@string/edit_profile" />

        <TextView
            android:id="@+id/editPassword"
            style="@style/MenuTextView"
            android:text="@string/change_password" />

        <TextView
            android:id="@+id/editTheme"
            style="@style/MenuTextView"
            android:text="@string/change_theme" />

        <TextView
            android:id="@+id/exitAccount"
            style="@style/MenuTextView"
            android:text="@string/log_out_account" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>