<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".View.Fragments.UserAuthorizationFragment">

    <TextView
        android:id="@+id/registrationTextView"
        style="@style/TitleText"
        android:text="@string/authorization" />

    <EditText
        android:id="@+id/editTextPhone"
        style="@style/EditTextStyle"
        android:hint="@string/phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/editTextPassword"
        style="@style/EditTextStyle"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/authorizationButton"
        style="@style/ButtonStyle"
        android:backgroundTint="@color/blue"
        android:text="Войти"/>

</LinearLayout>